Basic Dij Algorithm
Added network class to convert string network into doubly linked int node network
Added Dij Algorithm for AspectPath class, needs option for path deviations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,12 @@
         "optional": "cpp",
         "ratio": "cpp",
         "sstream": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "set": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stack": "cpp"
     }
 }
